# 2048

./: Cargo.toml  README.md  b2048-100a9918a926fad6.js  b2048-288628bb513e2e72.js  b2048-41dba138d64684f7.js  b2048-7d6afda96daf9afc.js  b2048-ba936eb004a61e41.js  game.py  index.html  main.py  requirements.txt  settings.py  setup.py
.github/workflows/: cxfreeze-build.yml  deploy.yaml
src/: assets.rs  audio.rs  lib.rs  main.rs  moving.rs  settings.rs  tiling.rs  ui.rs
src/ui/: congrats.rs  main_menu.rs  mod.rs  pause_menu.rs  won_menu.rs
