[package]
name = "b2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.11", features=["vorbis"]}
rand = "0.8"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.11"
default-features = false
features = ["dynamic_linking"]

[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3